# classroom-crew

./: README.md  pyproject.toml  sample-result-1.json  sample-result-2.json  sample-result-3.json  sample-result.json
classroom-crew/: crew.py
classroom-crew/config/: tasks.yaml
src/classroom-crew/: main.py
src/classroom-crew/config/: agents.yaml
src/classroom_crew/: crew.py  main.py
src/classroom_crew/config/: agents.yaml  tasks.yaml
