[project]
name = "classroom_crew"
version = "0.1.0"
description = "classroom_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "pysqlite3-binary"
]

[project.scripts]
classroom_crew = "classroom_crew.main:run"
run_crew = "classroom_crew.main:run"
train = "classroom_crew.main:train"
replay = "classroom_crew.main:replay"
test = "classroom_crew.main:test"
plot = "classroom_crew.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
